# turboQcli

./: .gitignore  README.md  pyproject.toml  run_benchmark.py
plans/: plan.md
turboq/: __init__.py  benchmark.py  cli.py  gguf_convert.py  quantizer.py
